# curious-ocaml

./: .gitignore  CLAUDE.md  MD_metadata.md  README.md  SESSION.md  curious.opam  dune  dune-project  intro.md  new_book.html  old_lectures_as_book.html  old_lectures_as_book.md
.github/workflows/: static.yml
chapter1/: Lec1.ml  Lec1class.ml  README.md  functional-lecture01-via-latex.tex  functional-lecture01.md  functional-lecture01.tm
chapter10/: Flow.ml  Flow.mli  Lec10a.ml  Lec10b.ml  Lec10c.ml  Lec10d.ml  Lec10e.ml  Lec10gtk.ml  Lec10tk.ml  README.claude.md  README.codex.md  README.md  chapter10.ml  dune  functional-lecture10-via-latex.tex  functional-lecture10.md  functional-lecture10.tm  lecture10-exercises-via-latex.tex  lecture10-exercises.md  lecture10-exercises.tm  lwd_vs_incremental_comparison.md  prelude.ml
chapter11/: ExtV.ml  FP_ADT.ml  Monad.ml  Objects.ml  Parsec.ml  Plugin1.ml  Plugin2.ml  PluginBase.ml  PluginRun.ml  PolyRecM.ml  PolyV.ml  README.md  Visitor.ml  functional-lecture11-via-latex.tex  functional-lecture11.md  functional-lecture11.tm  lecture11-exercises-via-latex.tex  lecture11-exercises.md  lecture11-exercises.tm  prelude.ml
chapter2/: Lec2.ml  Lec2class.ml  Lec2exs.ml  Lec2fresh.ml  Lec2sols.ml  README.md  functional-lecture02-deriv1-via-latex.tex  functional-lecture02-deriv1.md  functional-lecture02-deriv1.tm  functional-lecture02-via-latex.tex  functional-lecture02.md  functional-lecture02.tm  lecture02-exercises-via-latex.tex  lecture02-exercises.md  lecture02-exercises.tm
chapter3/: Lec3.ml  Lec3Murad.ml  Lec3exs.ml  Lec3work.ml  README.md  dune  functional-lecture03-via-latex.tex  functional-lecture03.md  functional-lecture03.tm  lecture03-exercises-via-latex.tex  lecture03-exercises.md  lecture03-exercises.tm
chapter4/: Lec4.ml  Lec4exs.ml  README.md  functional-lecture04-via-latex.tex  functional-lecture04.md  functional-lecture04.tm  lecture04-exercises-via-latex.tex  lecture04-exercises.md  lecture04-exercises.tm  prelude.ml
chapter5/: Lec5.ml  Lec5exs.ml  Lec5unif.ml  Lec5work.ml  README.md  functional-lecture05-via-latex.tex  functional-lecture05.md  functional-lecture05.tm  lecture05-exercises-via-latex.tex  lecture05-exercises.md  lecture05-exercises.tm  red_black_trees_deletion.tm
chapter6/: Lec6.ml  Lec6_1.ml  Lec6exs.ml  Lec6honey.ml  Lec6tents.ml  README.md  functional-lecture06.md  functional-lecture06.tm  honey0.eps  lecture06-exercises-via-latex.tex  lecture06-exercises.md  lecture06-exercises.tm  prelude.ml
chapter7/: Lec7.ml  Lec7exs.ml  README.md  functional-lecture07-via-latex.tex  functional-lecture07.md  functional-lecture07.tm  lecture07-exercises-via-latex.tex  lecture07-exercises.md  lecture07-exercises.tm  prelude.ml  sin_cos_1.eps
chapter8/: Lec8.ml  Lec8exs.ml  README.md  functional-lecture08-via-latex.tex  functional-lecture08.md  functional-lecture08.tm  lecture08-exercises-via-latex.tex  lecture08-exercises.md  lecture08-exercises.tm  monad_classes.ml  monads.ml  prelude.ml
chapter9/: README.claude.md  README.codex.md  README.md  dune  functional-lecture09-via-latex.tex  functional-lecture09.md  functional-lecture09.tm  lecture09-exercises-via-latex.tex  lecture09-exercises.md  lecture09-exercises.tm  sensor_fusion.ml
chapter9/Lec9-calc-param/: lexer.mll  parser.mly
chapter9/Lec9b/: Makefile  main.ml  sub1.ml  sub1.mli  sub2.ml
chapter9/Lec9c/: EngLexer.mll  EngMorph.ml  IndexParser.ml  InvIndex.ml  InvIndex1.ml  InvIndex2.ml  InvIndex3.ml  InvIndex4.ml  InvIndex5.ml  InvIndex6.ml  InvIndex7.ml  shakespeare.xml  stemmer.ml
chapter9/Lec9e/: Eng.ml  EngLexer.mll  EngParser.mly
chapter9/Lec9m/: Emails.mll  email_corpus.xml
chapter9/Lec9o/: MapSpeed.data  MapSpeed.ml  Optim0.ml  Optim1.ml  Optim2.ml  Optim3.ml  Optim3_5.ml  Optim4.ml  profile.txt  profile1.txt  profile2.txt  profile3.txt  profile3_5.txt  profile4.txt
exam/: Assignments1.ml  Exam.ml  Exam1-via-latex.tex  Exam1.md  Exam1.tm  ExamEx6.ml  ExamSol.ml  Problems99.ml  exam-Feb2013-set1-via-latex.tex  exam-Feb2013-set1.md  exam-Feb2013-set1.tm  exam-Feb2013-set2-via-latex.tex  exam-Feb2013-set2.md  exam-Feb2013-set2.tm  exam-Feb2013-set3-via-latex.tex  exam-Feb2013-set3.md  exam-Feb2013-set3.tm
for_texmacs/: highlight.sty  highlight.ts  honey.tm
pdfs/: dune  template.latex
site/: Monty_open_door.eps  chain_reaction.eps  dune  honey1.eps  honey_demo.eps  honey_min.eps  honey_min1.eps  honey_min2.eps  index.html  inject-toc-toggle.sh  new_book.html  old_lectures_as_book.html  style.css
