(copy_files
 (files ../*.md))

(copy_files
 (files ../chapter6/*.eps))

(copy_files
 (files ../chapter7/*.eps))

(copy_files
 (files ../chapter8/*.eps))

(copy_files
 (files ../chapter9/*.gif))

(copy_files
 (files ../chapter10/*.png))

(copy_files
 (files ../exam/*.png))

(rule
 (alias new_book)
 (mode promote)
 (target new_book.pdf)
 (deps README.md)
 (action
  (system "pandoc -s --toc --katex %{deps} -o %{target}")))

; Disabled due to LaTeX errors in extracted markdown files (0.5em spacing, \n escape sequences, Unicode chars)
; (rule
;  (alias old_lectures_as_book)
;  (mode promote)
;  (target old_lectures_as_book.pdf)
;  (deps old_lectures_as_book.md)
;  (action
;   (system "pandoc -s --toc --katex %{deps} -o %{target}")))
