(copy_files
 (files ../*.md))

(copy_files
 (mode promote)
 (files ../chapter6/*.eps))

(copy_files
 (mode promote)
 (files ../chapter7/*.eps))

(copy_files
 (mode promote)
 (files ../chapter8/*.eps))

(copy_files
 (mode promote)
 (files ../chapter9/*.gif))

(copy_files
 (mode promote)
 (files ../chapter10/*.png))

(copy_files
 (mode promote)
 (files ../exam/*.png))

(rule
 (alias new_book)
 (mode promote)
 (target new_book.html)
 (deps README.md)
 (action
  (system "pandoc -s --toc --katex %{deps} -o %{target}")))

(rule
 (alias old_lectures_as_book)
 (mode promote)
 (target old_lectures_as_book.html)
 (deps old_lectures_as_book.md)
 (action
  (system
   "pandoc -s --toc --katex %{deps} -o %{target}")))

; (rule
;  (alias old_lectures_as_book)
;  (mode promote)
;  (target old_lectures_as_book.hs)
;  (deps old_lectures_as_book.md)
;  (action
;   (system
;    "pandoc -s --toc --katex --to native %{deps} -o %{target}")))
