(copy_files
 (files ../*.md))

(copy_files
 (mode promote)
 (files ../chapter6/*.eps))

(copy_files
 (mode promote)
 (files ../chapter6/*.png))

(copy_files
 (mode promote)
 (files ../chapter7/*.eps))

(copy_files
 (mode promote)
 (files ../chapter8/*.eps))

(copy_files
 (mode promote)
 (files ../chapter9/*.gif))

(copy_files
 (mode promote)
 (files ../chapter10/*.png))

(copy_files
 (mode promote)
 (files ../exam/*.png))

(rule
 (alias new_book)
 (mode promote)
 (target new_book.html)
 (deps README.md style.css)
 (action
  (system "sed 's/```ocaml [^`]*/```ocaml/' README.md | pandoc -s --toc --katex --css=style.css --highlight-style=tango --metadata title='Curious OCaml' --top-level-division=chapter --shift-heading-level-by=-1 -o %{target}")))

(rule
 (alias old_lectures_as_book)
 (mode promote)
 (target old_lectures_as_book.html)
 (deps old_lectures_as_book.md style.css)
 (action
  (system
   "sed 's/```ocaml [^`]*/```ocaml/' old_lectures_as_book.md | pandoc -s --toc --katex --css=style.css --highlight-style=tango --metadata title='Functional Programming 2012-2013' --top-level-division=chapter --shift-heading-level-by=-1 -o %{target}")))
