(copy_files
 (files ../*.md))

(copy_files
 (mode promote)
 (files ../*.png))

(copy_files
 (mode promote)
 (files ../*.jpg))

(copy_files
 (mode promote)
 (files ../chapter1/*.png))

(copy_files
 (mode promote)
 (files ../chapter1/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter2/*.png))

(copy_files
 (mode promote)
 (files ../chapter2/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter3/*.png))

(copy_files
 (mode promote)
 (files ../chapter3/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter4/*.png))

(copy_files
 (mode promote)
 (files ../chapter4/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter5/*.png))

(copy_files
 (mode promote)
 (files ../chapter5/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter6/*.eps))

(copy_files
 (mode promote)
 (files ../chapter6/*.png))

(copy_files
 (mode promote)
 (files ../chapter6/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter7/*.eps))

(copy_files
 (mode promote)
 (files ../chapter7/*.png))

(copy_files
 (mode promote)
 (files ../chapter7/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter8/*.eps))

(copy_files
 (mode promote)
 (files ../chapter8/*.png))

(copy_files
 (mode promote)
 (files ../chapter8/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter9/*.gif))

(copy_files
 (mode promote)
 (files ../chapter9/*.png))

(copy_files
 (mode promote)
 (files ../chapter9/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter10/*.png))

(copy_files
 (mode promote)
 (files ../chapter10/*.jpg))

(copy_files
 (mode promote)
 (files ../chapter11/*.png))

(copy_files
 (mode promote)
 (files ../chapter11/*.jpg))

(copy_files
 (mode promote)
 (files ../exam/*.png))

(rule
 (alias new_book)
 (mode promote)
 (target new_book.html)
 (deps README.md style.css)
 (action
  (system "sed 's/```ocaml [^`]*/```ocaml/' README.md | pandoc -s --toc --katex --css=style.css --highlight-style=tango --metadata title='Curious OCaml' --top-level-division=chapter --shift-heading-level-by=-1 | sed 's/var macros = \\[\\];/var macros = {\"\\\\\\\\hyp\": \"\\\\\\\\substack{#1 \\\\\\\\\\\\\\\\[-0.5em] \\\\\\\\vdots \\\\\\\\\\\\\\\\ #2}\"};/' > %{target}")))

(rule
 (alias old_lectures_as_book)
 (mode promote)
 (target old_lectures_as_book.html)
 (deps old_lectures_as_book.md style.css)
 (action
  (system
   "sed 's/```ocaml [^`]*/```ocaml/' old_lectures_as_book.md | pandoc -s --toc --katex --css=style.css --highlight-style=tango --metadata title='Functional Programming 2012-2013' --top-level-division=chapter --shift-heading-level-by=-1 | sed 's/var macros = \\[\\];/var macros = {\"\\\\\\\\hyp\": \"\\\\\\\\substack{#1 \\\\\\\\\\\\\\\\[-0.5em] \\\\\\\\vdots \\\\\\\\\\\\\\\\ #2}\"};/' > %{target}")))
